--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(.)
 
 
-add_executable(sort main.cpp sort.h sort_inner.h sort_impl.h util.h util_impl.h Comparable.h Comparable.cpp test.cpp test.h)
+add_executable(sort main.cpp sort.h sort_impl.h util.h util_impl.h Comparable.h Comparable.cpp test.cpp test.h test_impl.h)
